# dsl-test

./: .env.example  Cargo.toml  README.md  demo_distributed.sh  example_llm.yaml  example_switch_script.yaml
benchmarks/: DIFY_TEST_GUIDE.md  README.md  dify_parallel_compute.yml  distributed_flat.yaml  distributed_test.yaml  gen_workflow.py  parallel_compute.yaml  parallel_http.yaml
converted/: deep_research.yaml  text_polishing.yaml
difydsl/: DeepResearch.yml  Text Polishing · Translation Tool.yml
examples/: example.yaml  example_advanced.yaml  example_loop.yaml  example_transform_file.yaml  test_loop_input.yaml  test_mcp.yaml
src/: coordinator.rs  engine.rs  executor.rs  main.rs  memory.rs  schema.rs  server.rs  template.rs  worker.rs
src/nodes/: assign.rs  control.rs  file.rs  http.rs  input.rs  llm.rs  loop_node.rs  mcp.rs  mod.rs  script.rs  shell.rs  transform.rs
tests/: mcp_server.py
