[package]
name = "workflow-engine"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"
anyhow = "1.0"
clap = { version = "4.0", features = ["derive"] }
reqwest = { version = "0.11", features = ["json"] }
dashmap = "5.0"
async-trait = "0.1"
log = "0.4"
env_logger = "0.10"
regex = "1.0"
uuid = { version = "1.0", features = ["v4"] }
jsonpath_lib = "0.3"
dotenv = "0.15"
axum = "0.8.7"
tower-http = { version = "0.6.6", features = ["trace"] }
